# hft-learning

./: .gitignore  404.html  CMakeLists.txt  Communication_diagram.md  README.md  activity_diagram.md  bench_report.md  class_diagram.md  component_diagram.md  composite_structure_diagram.md  deployment_diagram.md  index.html  interaction_overview_diagram.md  object_diagram.md  package_diagram.md  parse_results.py  profile_diagram.md  sequence_diagram.md  sitemap.xml  statemachine_diagram.md  timing_diagram.md  usecase_diagram.md  validate_csv.py
.github/workflows/: deploy.yml
assets/css/: styles.e648293a.css
assets/js/: 0243743f.63bc380c.js  0243743f.6eee128f.js  1399.f94f54cf.js  147.2e0c0790.js  147.55adefa1.js  17896441.0b44fcfd.js  17d42c6d.6b11b901.js  17d42c6d.83d9e2e4.js  1812.7c7b8535.js  1f391b9e.d0b36472.js  2020.0f7895d0.js  2109.1ada37d2.js  227.66fb9b0f.js  2601.04933d1b.js  2601.657c9e9c.js  2768.9808f7bd.js  2768.dea9c2b4.js  2871.bd113592.js  2871.ed75458b.js  2975.8aa1bfc3.js  2975.b696ab8a.js  2c5e3517.87a12e3e.js  2c5e3517.d9ce0761.js  31cb17c3.4523d120.js  31cb17c3.bace53f3.js  3459.35212902.js  3499.a4b9b537.js  3535.09c8b740.js  3636.989ed43a.js  3693.e96f8c0e.js  3980.3d3fb465.js  3980.9b4de8f5.js  4041.02b2a9c0.js  42796b08.079606a0.js  429.9b206633.js  4406.dea71ede.js  4438.8d752433.js  4489.8ad2e89c.js  4497.20986138.js  48d603f8.9400471c.js  (+92 more)
benchmarks/: CMakeLists.txt  ITCH_to_LOB_pipeline.cpp  NaiveOrderBook.hpp  benchmark_lob.cpp  benchmark_logger.cpp  tick_to_trade_pipeline.cpp
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: architecture.md  async-lock-free-logger.md  benchmarking-setup.md  benchmarking.md  big-picture.md  cpp-concepts.md  exchange-emulator.md  execution-management-system.md  hardware-architecture.md  intro.md  introduction.md  itch-pipeline-architecture.md  lob-benchmarking.md  lob-cpp-features.md  lob-data-structures.md  lob-introduction.md  lob-system-design.md  ouch-protocol-gateway.md  pre-trade-risk-engine.md  project-purpose.md  results-analysis.mdx  simple-explanation.md  software-primitives.md  strategy-engine-framework.md  system-design.md  tcp-egress-networking.md  tick-to-trade-metrics.md
docs-site/docs/lessons/: 01-cpu-cache-and-false-sharing.md  02-atomics-and-memory-ordering.md  03-numa-architecture.md  04-measuring-latency.md  05-hardware-deep-dive.md  06-lock-free-progress-guarantees.md  07-kernel-bypass-and-os-jitter.md  08-instruction-pipelining.md  _category_.json
docs-site/docs/uml/: Communication_diagram.md  activity_diagram.md  class_diagram.md  component_diagram.md  composite_structure_diagram.md  deployment_diagram.md  interaction_overview_diagram.md  object_diagram.md  package_diagram.md  profile_diagram.md  sequence_diagram.md  statemachine_diagram.md  timing_diagram.md  usecase_diagram.md
docs-site/src/components/: BenchmarkCharts.js
docs-site/src/data/: benchmark_results.json
docs-site/src/pages/: index.js
docs/async-lock-free-logger/: index.html
docs/benchmarking/: index.html
docs/big-picture/: index.html
docs/exchange-emulator/: index.html
docs/execution-management-system/: index.html
docs/hardware-architecture/: index.html
docs/introduction/: index.html
docs/itch-pipeline-architecture/: index.html
docs/lob-benchmarking/: index.html
docs/lob-cpp-features/: index.html
docs/lob-data-structures/: index.html
docs/lob-introduction/: index.html
docs/lob-system-design/: index.html
docs/ouch-protocol-gateway/: index.html
docs/pre-trade-risk-engine/: index.html
docs/results-analysis/: index.html
docs/simple-explanation/: index.html
docs/software-primitives/: index.html
docs/strategy-engine-framework/: index.html
docs/system-design/: index.html
docs/tcp-egress-networking/: index.html
docs/tick-to-trade-metrics/: index.html
docs/uml/uml-Communication_diagram/: index.html
docs/uml/uml-activity_diagram/: index.html
docs/uml/uml-class_diagram/: index.html
docs/uml/uml-component_diagram/: index.html
docs/uml/uml-composite_structure_diagram/: index.html
docs/uml/uml-deployment_diagram/: index.html
docs/uml/uml-interaction_overview_diagram/: index.html
docs/uml/uml-object_diagram/: index.html
docs/uml/uml-package_diagram/: index.html
docs/uml/uml-profile_diagram/: index.html
docs/uml/uml-sequence_diagram/: index.html
docs/uml/uml-statemachine_diagram/: index.html
docs/uml/uml-timing_diagram/: index.html
docs/uml/uml-usecase_diagram/: index.html
include/: AsyncLogger.hpp  EMS.hpp  IStrategy.hpp  ITCH5Parser.hpp  MarketMakerStrategy.hpp  NetworkEventLoop.hpp  NumaAllocator.hpp  OUCH42.hpp  OrderBook.hpp  Payload.hpp  PreTradeRisk.hpp  SPSCQueue.hpp  StrategyEngine.hpp  TCPEgress.hpp  TSCUtils.hpp  ThreadAffinity.hpp
markdown-page/: index.html
src/: AsyncLogger.cpp  Benchmark.cpp  EMS.cpp  ExchangeEmulator.cpp  ITCH5Parser.cpp  Main.cpp  MarketMakerStrategy.cpp  NetworkEventLoop.cpp  NumaAllocator.cpp  OUCH42.cpp  OrderBook.cpp  PreTradeRisk.cpp  StrategyEngine.cpp  TCPEgress.cpp  TSCUtils.cpp  ThreadAffinity.cpp  run_benchmark.sh
tests/: CMakeLists.txt  run_orderbook_tests.sh  test_ems.cpp  test_event_loop.cpp  test_itch5_parser.cpp  test_logger.cpp  test_numa_allocator.cpp  test_orderbook.cpp  test_phase1  test_phase1.cpp  test_spsc_queue.cpp  test_thread_affinity.cpp
